--- a/index.html
+++ b/index.html
@@ -1,7 +1,111 @@
 <html>
-    <head>
-    </head>
- <body>
-Hello World!
-  </body>
+<head>
+<title>Моя страница</title>
+<style type="text/css">
+
+/* Базовый контейнер табов */
+.tabs {
+  margin:0 25% 0 25%;
+  width:50%;
+  padding: 0px;
+ 
+}
+/* стили секций с содержанием */
+section {
+  display: none;
+  padding: 15px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+.tabs input {
+  display: none;
+}
+/* стили вкладок (табов) */
+.tabs label {
+  display: inline-block;
+  margin: 0 0 -1px;
+  padding: 15px 25px;
+  font-weight: 600;
+  text-align: center;
+  color: #aaa;
+  border: 1px solid #ddd;
+  background: #f1f1f1;
+  border-radius: 3px 3px 0 0;
+}
+/* шрифт-иконки от Font Awesome в формате Unicode */
+.tabs label:before {
+  font-family: fontawesome;
+  font-weight: normal;
+  margin-right: 10px;
+}
+
+/* изменения стиля заголовков вкладок при наведении */
+.tabs label:hover {
+  color: #888;
+  cursor: pointer;
+}
+/* стили для активной вкладки */
+.tabs input:checked + label {
+  color: blue;
+  border: 1px solid #ddd;
+  border-top: 1px solid #009933;
+  border-bottom: 1px solid #fff;
+  background: #fff;
+}
+/* активация секций с помощью переключателя :checked */
+#tab1:checked ~ #content1,
+#tab2:checked ~ #content2,
+#tab3:checked ~ #content3,
+#tab4:checked ~ #content4 {
+  display: block;
+}
+
+
+   li:nth-child(2n) {
+    background: #FFFD99; /* Цвет фона */
+    color: #9400D3; /* Цвет текста */
+   } 
+ 
+
+</style>
+</head>
+<body>
+
+  <div class="tabs">
+  
+    <input id="tab1" type="radio" name="tabs" checked>
+    <label for="tab1" title="Запрос">Запрос</label>
+ 
+    <input id="tab2" type="radio" name="tabs">
+    <label for="tab2" title="Ответ">Ответ</label>
+ 
+    <input id="tab3" type="radio" name="tabs">
+    <label for="tab3" title="История">История</label>
+ 
+ 
+    <section id="content1">
+        <p align="center">
+          Здесь размещаете любое содержание....
+        </p>
+    </section>  
+    <section id="content2">
+        <p align="center">
+          Здесь размещаете любое содержание....
+        </p>
+    </section> 
+    <section id="content3">
+        <p align="center">
+		  <div>
+		  <li>текcт;</li>
+          <li>текcт;</li>
+          <li>текcт;</li>
+          <li>текcт;</li>
+		  <li>текcт;</li>
+          <li>текcт;</li>
+		  <div>
+		</p>
+    </section> 
+      
+  </div>
+</body>
 </html>
